--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,25 +1,24 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>home</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      <img src="assets/imgs/logoicon.png" id="logo" >
+      <span class="genreName">{{genreName}}</span>
+    </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-start (click)="openFavorites()" class="btn-txt">
+        <ion-icon name="star"></ion-icon>
+        Favs
+      </button>
+      <button ion-button icon-start (click)="openGenres()" class="btn-txt">
+        <ion-icon name="funnel"></ion-icon>
+        Filter
+      </button>
+      <button ion-button icon-only (click)="showSearchBox()">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
-  <div  *ngIf="games" >
-    <ul *ngFor="let game of games">
-      <li>{{game.name}}</li>
-    </ul>
-  </div>
 
-
-
-</ion-content>
