--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,5 +20,43 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content class="card-background-page">  
+  <div *ngIf="games">
+    <ion-card *ngFor="let game of games">
+      <div *ngIf="game.screenshots; else noImage"></div>
+      <div class="game-image">
+        <img src="https://images.igdb.com/igdb/image/upload/t_screenshot_med/{{game.screenshots[0].cloudinary_id}}.jpg" class="tinted">
+      </div>
+
+      <ng-template #noImage>
+        <div class="game-image">
+          <img src="../../assets/noImage.jpg" >
+        </div>
+      </ng-template>
+
+      <div *ngIf="favorites.indexOf(game.id) == '-1'; then fav else remove"></div>
+      <ng-template #fav>
+        <button ion-button outline medium color="primary" icon-only (click)="favorite(game.id)">
+          <ion-icon name="star"></ion-icon>
+        </button>
+      </ng-template>
+
+      <ng-template #remove>
+        <button ion-button medium color="primary" icon-only (click)="removefavorite(game.id)">
+          <ion-icon name="close"></ion-icon>
+        </button>
+      </ng-template>
+
+      <div class="card-title" (click)="detailsPage(game.id)">
+        {{game.name}}
+      </div>
+      <div class="card-subtitle" *ngIf="game.release_dates">
+        {{game.release_dates[0].m}} / {{game.release_dates[0].y}}
+      </div>
+
+    </ion-card>
+  </div>
+</ion-content>
+
 
 
