correct a function name

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,7 +42,7 @@
       </ng-template>
 
       <ng-template #remove>
-        <button ion-button medium color="primary" icon-only (click)="removefavorite(game.id)">
+        <button ion-button medium color="primary" icon-only (click)="removeFavorites(game.id)">
           <ion-icon name="close"></ion-icon>
         </button>
       </ng-template>
