--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,23 +1,69 @@
-<!--
-  Generated template for the DetailsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>details</ion-title>
+  <ion-navbar color="primary">
+    <div *ngIf="game">
+      <ion-title>{{game.name}}</ion-title>
+    </div>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <div *ngIf="game">
-    {{game | json}}
+    <div class="game-image">
+      <img *ngIf="game.screenshots" src="https://images.igdb.com/igdb/image/upload/t_screenshot_med/{{game.screenshots[0].cloudinary_id}}.jpg" class="tinted">
+      <img *ngIf="!game.screenshots" src="../../assets/imgs/noImage.jpg" class="tinted">
+    </div>
+
+    <div id="popover">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-6>
+          <h4>Rating</h4>
+          <p class="larger-res">{{ game.popularity | number: '1.1-1'}}</p>
+        </ion-col>
+        <ion-col col-6>
+          <h4>Perspective</h4>
+          <p *ngIf="perspective">{{ perspective.name }}</p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6>
+          <h4>Website</h4>
+          <button ion-button (click)="launchSites(game.websites[0].url)" small>Visit</button>
+        </ion-col>
+        <ion-col col-6>
+          <h4>Release date</h4>
+          <p>{{ game.first_release_date | date: shortDate }}</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
-  <div *ngIf="perspective">
-    {{perspective.name}}
+
+    <ion-card padding>
+      <h4>Game Summary</h4>
+      <p>{{ game.summary }}</p>
+    </ion-card>
+
+    <div id="screenslider" *ngIf="game.screenshots?.length > 0">
+      <h5>Screenshots</h5>
+      <ion-scroll scrollX="true" class="item">
+        <ion-row [style.width]="game.screenshots?.length+'00%'">
+          <ion-col *ngFor="let screenshot of game.screenshots">
+            <img *ngIf="screenshot" src="https://images.igdb.com/igdb/image/upload/t_screenshot_med/{{screenshot.cloudinary_id}}.jpg" class="tinted">
+          </ion-col>
+        </ion-row>
+      </ion-scroll>
+    </div>
+
+    <h5>Videos &amp; Trailers</h5>
+    <ion-list>
+      <button ion-item *ngFor="let video of game.videos" (click)="playVideo(video.video_id)">
+        <ion-icon name="play" small item-start color="primary" class="itemfix"></ion-icon>
+        {{video.name}}
+      </button>
+    </ion-list>
   </div>
 </ion-content>
