--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -32,7 +32,7 @@
       <ion-row>
         <ion-col col-6>
           <h4>Website</h4>
-          <button ion-button (click)="launchSites(game.websites[0].url)" small>Visit</button>
+          <button ion-button (click)="launchSite(game.websites[0].url)" small>Visit</button>
         </ion-col>
         <ion-col col-6>
           <h4>Release date</h4>
