--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -17,7 +17,7 @@
       <img *ngIf="!game.screenshots" src="../../assets/imgs/noImage.jpg" class="tinted">
     </div>
 
-    <div id="popover" class="fadeInAnim">
+    <div id="popover" class="fadeInAnim" *ngIf="game.popularity">
     <ion-grid>
       <ion-row>
         <ion-col col-6>
@@ -42,7 +42,7 @@
     </ion-grid>
   </div>
 
-    <ion-card padding class="fadeUpAnim">
+    <ion-card padding class="fadeUpAnim" *ngIf="game.summary">
       <h4>Game Summary</h4>
       <p>{{ game.summary }}</p>
     </ion-card>
